# ComfyUI-JK-HeartMuLa

./: .gitignore  CLAUDE.md  NOTICE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
example_workflows/: HeartMuLa Music Generator.json  HeartMuLaGeneration.json  HeartMuLaTranscription.json  style_transfer_basic.json
heartlib/: __init__.py
heartlib/heartcodec/: configuration_heartcodec.py  modeling_heartcodec.py
heartlib/heartcodec/models/: flow_matching.py  transformer.py
heartlib/heartmula/: modeling_heartmula.py
heartlib/pipelines/: lyrics_transcription.py  music_generation.py
jk_nodes/: muq_loader.py  style_embed.py  style_generator.py  tags_builder.py
js/: heartmula_loader.js
