[project]
name = "ComfyUI-HeartMuLa"
description = "HeartMuLa audio generation and lyric transcription"
version = "0.1.0"
license = {file = "LICENSE"} 

dependencies = ["torchtune>=0.4.0", "accelerate>=0.26.0", "vector-quantize-pytorch>=1.12.0"]

[project.urls]
Repository = "https://github.com/BobRandomNumber/ComfyUI-HeartMuLa"

[tool.comfy]
PublisherId = "bobrandomnumber"

DisplayName = "HeartMuLa"
